build(deps): bump jdk from 21 to 25